@@ -11,6 +11,8 @@
 * docx parser returns `ParsedDocx` with additional property `is_paged`
 * new flag in `include_images` in `PDFParserConfig`
 * add `DocxParserConfig`
+* add `OcrConfig`
+* add `strategy` in `OcrConfig`
 
 ## v0.4.0
 
